syntax = "proto3";

option java_package = "io.github.pavelshe11.authmicro.grpc"; // место для генерации файлов
option java_outer_classname = "AccountCreationProto";

import "google/protobuf/struct.proto";

import "error.proto";

service AccountCreationService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {}
}

message CreateAccountRequest {
  map<string, google.protobuf.Value> userData = 1;
}

message CreateAccountResponse {
  oneof result {
    SuccessResponse success = 1;
    ErrorResponse error = 2;
  }
}

message SuccessResponse {
  string message = 1;
}

message ErrorResponse {
  string error = 1;
  repeated FieldError detailedErrors = 2;
}